<resources>
    <string name="app_name">ITEA_App</string>
    <string name="rbFreelance">Freelance</string>
    <string name="rbFulltime">Fulltime</string>
    <string name="rbRemote">Remote</string>
    <string name="rbOther">Other</string>
    <string name="etName">Name</string>
    <string name="etSurname">Surname</string>
    <string name="etEmail">Email</string>
    <string name="etWorkSchedule">Work Schedule</string>
    <string name="etSkills">Skills</string>
    <string name="cbJava">Java</string>
    <string name="cbAndroid">Android</string>
    <string name="cbJavaEE">Java EE</string>
    <string name="cbCsharp">C#</string>
    <string name="cbPHP">PHP</string>
    <string name="cbOther">Other</string>
    <string name="bSave">Save</string>
    <string name="bCancel">Cancel</string>
    <string name="bLater">Later</string>
    <string name="cbAuto">Auto</string>
    <string name="cbCreditCard">Credit Card</string>
    <string name="bTeleport">Teleport</string>
    <string name="twToolbar">Sign In</string>
    <string name="tvHelloAgain">Hello Again!</string>
    <string name="SighInUsing">Sigh in using</string>
    <string name="bGoogle">Google</string>
    <string name="bFacebook">Facebook</string>
    <string name="ibGoogle">Google</string>
    <string name="ibFacebook">Facebook</string>
    <string name="tvOR">or</string>
    <string name="etLogin">Login</string>
    <string name="etPassword">Password</string>
    <string name="bLogIn">Log In</string>
    <string name="tvFYP">Forgot your password?</string>
    <string name="tvSignUp">SignUp</string>
    <string name="tvTerms">Terms</string>
    <string name="SecondActivity">Second Activity</string>
    <string name="etNumber">enter your number</string>
    <string name="bCall">Call</string>
    <string name="title_activity_second">Profile Activity</string>
    <string name="title_activity_third">List Activity</string>
    <string name="etPhone">Phone Number</string>
    <string name="etCountry">Country</string>
    <string name="bExit">Exit</string>
    <string name="etCity">City</string>
    <string name="etNotes">Notes</string>
    <string name="nameLabel">Name:</string>
    <string name="surnameLabel">Surname:</string>
    <string name="emailLabel">Email:</string>
    <string name="countryLabel">Country:</string>
    <string name="cityLabel">City:</string>
    <string name="phoneLabel">Phone:</string>
    <string name="bBack">Back</string>
</resources>
