<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/ivListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivListItem"
        android:text="@string/nameLabel"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivListItem"
        android:layout_toEndOf="@+id/tvNameLabel"
        />

    <TextView
        android:id="@+id/tvSurnameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNameLabel"
        android:text="@string/surnameLabel"
        />

    <TextView
        android:id="@+id/tvSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_toEndOf="@+id/tvSurnameLabel"
        />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSurnameLabel"
        android:text="@string/emailLabel"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSurname"
        android:layout_toEndOf="@+id/tvEmailLabel"
        />

    <TextView
        android:id="@+id/tvCountryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmailLabel"
        android:text="@string/countryLabel"
        />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmail"
        android:layout_toEndOf="@+id/tvCountryLabel"
        />

    <TextView
        android:id="@+id/tvCityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCountryLabel"
        android:text="@string/cityLabel"/>

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCountry"
        android:layout_toEndOf="@+id/tvCityLabel"
        />

    <TextView
        android:id="@+id/tvPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCityLabel"
        android:text="@string/phoneLabel"
        />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCity"
        android:layout_toEndOf="@+id/tvPhoneLabel"
        />
</RelativeLayout>