<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.vatttghern.itea_app.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tNewToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3355ff00"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:digits="abcdefghijklmnopqrstuvwxyz"
        android:hint="@string/etLogin"
        android:inputType="text"
        android:textColorHint="#000000"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLogin"
        android:layout_centerHorizontal="true"
        android:digits="1234567890 "
        android:hint="@string/etPassword"
        android:inputType="text"
        android:textColorHint="#000000"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_weight="1"
        android:background="#69c163"
        android:text="@string/bLogIn"
        android:textSize="18sp"
        />
</RelativeLayout>